# OzClientiOS

./: BUILD_OZ_CLIENT_IOS.md  README.md
OzClient/: README.md
OzClient/AgentCom/: CMakeLists.txt
OzClient/AgentCom/OzAgent/: CMakeLists.txt  ClientAgentEncoder.c  client_agent.cpp
OzClient/AgentCom/cmake/: android.toolchain.cmake  darwin.cmake  darwin.cmake_prev  install_iphone_arm.sh  ios-arm.cmake  ios-arm64.cmake  ios-armv7.cmake  ios-x86_64.cmake  msvc_config.cmake
OzClient/CloudCom/: CMakeLists.txt
OzClient/CloudCom/OzCloud/: CMakeLists.txt  COM_def.h  OSN_GW_agent.c  OSN_GW_agent.h  oz_cloudApi.cpp
OzClient/CloudCom/cmake/: env.txt  make_install_ios.sh
OzClient/OzCommon/: OZ_memory.c  OZ_memory.h  base64.cpp  base64.h  sha256.cpp  sha256.h  urlcode.cpp  urlcode.h
OzClient/OzCommon/api/: agent_api.cpp  agent_api.h  client_api.cpp  client_api.h
OzClient/OzCommon/json/: cJSON.c
OzClient/OzInit/: OzInit.c
OzClient/P2P/: CMakeLists.txt
OzClient/P2P/OzClient/: CMakeLists.txt  OzClientAPI.cpp  OzUtils.cpp
OzClient/P2P/OzClientApp/: CMakeLists.txt  OzClientApp.cpp
OzClient/P2P/cmake/: android.cmake  env-android-arm.sh  env-android-armv7.sh  env-android-x86.sh  env-iphone.sh  gcc_config.cmake  install_iphone_arm.sh  ios-arm.cmake  linux.cmake  make_install_ios.sh
OzClient/include/: OsnClient.h  OzClientAPI.h  OzUtils.h  Version.h
OzClient/include/openssl/: opensslconf.h
